# patibu

./: Cargo.toml  README.md  glslc_shader_compile.sh
src/: audio.rs  imgui_handler.rs  input_handler.rs  main.rs  pipelines.rs  streaming.rs  uniform.rs  vertex.rs  wgpu_core.rs
src/shader/glsl/: frag.spv  shader.frag  shader.vert  vert.spv
