[package]
name = "patibu"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = { version = "0.19", features = ["spirv"] }

winit = "0.29"

imgui = "0.12"
imgui-winit-support = "0.12"
imgui-wgpu = { git = "https://github.com/Yatekii/imgui-wgpu-rs", version = "0.24" }

cpal = "0.15"
glam = "0.29"
env_logger = "0.11"
pollster = "0.4"
ansi_term = "0.12"
log = "0.4"
bytemuck = { version = "1.18", features = [ "derive" ] }
